user interest API
